syntax = "proto3";
package protobuf;
option java_package = "com.fiture.recording.room.event.proto";
option java_outer_classname = "StageShowResultEventProto";

message StageShowResultEvent {
  // 抢镜生成的序号，注意不是抢镜ID
  int64 sequence = 1;
  // 房间ID
  int64 roomId = 2;
  // 抢镜发生在房间的哪个环节
  int64 roomItemId = 3;
  // 抢镜类型：GROUP_ROUND（小组轮播）、BURNING_POINTS（燃点获得）、COACH_ASSIGNMENT（教练指定）、WHOLE_BOILING（全场沸腾）
  string showType = 4;
  // 抢镜类型的目标值（可空，目前就BURNING_POINTS会有该值）
  int32 showTargetVal = 5;
  // 抢镜结束时间（可空，目前只有GROUP_ROUND和COACH_ASSIGNMENT会设置该值，动效类播完就结束，不需要服务端给出结束时间）
  // 另：如果客户端在时间结束未收到新的抢镜事件，可以继续当前事件，该字段的主要用处在于有排队的抢镜事件时，控制前一个事件的展示时间
  int64 showEndTime = 6;
  // 上一个抢镜事件的序号（可空）
  int64 preSequence = 7;
  // 上一个抢镜如果正在本地播，客户端对本次抢镜的处理方式：OVERRIDE（覆盖上一个）、QUEUE（排队）
  string preDoMethod = 8;
  // 被选中上镜的用户列表（可空，比如全场沸腾目前版本就不会有具体的人上镜，而是直接播放动效）
  repeated SelectedUser selectedUsers = 9;
}

message SelectedUser {
  int64 accountId = 1;
  string username = 2;
  string avatarUrl = 3;
  // 抢镜结果排序，扩展字段，当有多人上镜时用于显示排序
  int32 order = 4;
}